Create endpoints GET, POST and DELETE for the comments section
